--- a/index.html
+++ b/index.html
@@ -2,8 +2,18 @@
 <html lang="en">
 <head>
     <title>ExterNote</title>
+    <link rel="stylesheet" href="style.css">    
 </head>
 <body>
-    
+    <nav class="navbar">
+        <div class="logo">ExterNote</div>
+        <div class="account">
+            <div id="dropdown" class="dropdown-menu"></div>
+            <!-- <img src="https://via.placeholder.com/40" class="profile-icon" onclick="toggleMenu()" alt="Profile">
+            <a href="#">Account</a> -->
+        </div>
+
+    </nav>
+    <button id="add">+</button>
 </body>
 </html>
